# github-pic-upload

./: .gitignore  Cargo.toml  README.md
src/: main.rs  upload.rs
