[package]
name = "github-pic-upload"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12" , features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
rand = "0.8"
chrono = "0.4"
tempfile = "3.2"
clipboard-anywhere = "0.2"
config = "0.14"
lazy_static = "1.4"
iced = { version = "0.12" ,features = ["image","debug","advanced"]}
rfd = "0.14"
md5 = "0.7"
